--- a/style.scss
+++ b/style.scss
@@ -42,12 +42,14 @@ p{
 }
 
 .product-section{
-    background-color: gray; //temporary
+    background-color: white; //temporary
     width: 100%;
     height: 222px;
     border-radius: 5px;
     border-top: 3px solid;
     text-align: left;
+    box-shadow: 0px 10px 15px 0px $grayishBlue;
+    
 
     h1{
         color: $veryDarkBlue;
@@ -56,9 +58,18 @@ p{
     }
     
     p{
+        color: $grayishBlue;
         margin: 4px auto auto 27px;
         font-size: 13.2px;
         line-height: 22px;
+    }
+
+    img{
+        width: 56px;
+        position: relative;
+        left: 228px;
+        top: 10px;
+        top: 34px;
     }
 
 }
