--- a/style.scss
+++ b/style.scss
@@ -42,9 +42,10 @@ p{
 }
 
 .product-section{
+    margin-top: 25px;
     background-color: white; //temporary
     width: 100%;
-    height: 222px;
+    height: 220px;
     border-radius: 5px;
     border-top: 3px solid;
     text-align: left;
@@ -65,7 +66,7 @@ p{
     }
 
     img{
-        width: 56px;
+        width: 58px;
         position: relative;
         left: 228px;
         top: 10px;
@@ -76,4 +77,16 @@ p{
 
 #supervisor-section{
     border-top-color: $cyan;
+}
+
+#team-builder-section{
+    border-top-color: $red;
+}
+
+#karma-section{
+    border-top-color: $orange;
+}
+
+#calculator-section{
+    border-top-color: $blue;
 }
