--- a/style.scss
+++ b/style.scss
@@ -100,3 +100,50 @@ footer{
         font-size: 8pt;
     }
 }
+
+//Desktop Design:
+@media only screen and (min-width: 600px){
+
+    body{
+        display: flex;
+        margin: 0px 0px 0px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #cards{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto auto;
+        gap: 0px;
+        //margin: auto 10% auto 10%;
+    }
+
+
+
+    .product-section{
+        max-width: 350px;
+        margin: 0px 0px 0px 0px;
+    }
+
+    #supervisor-section{
+        grid-column: 1;
+        grid-row: 2 / span 2;
+    }
+
+    #team-builder-section{
+        grid-column: 2;
+        grid-row: 1 / span 2;
+    }
+
+    #karma-section{
+        grid-column: 2;
+        grid-row: 3 / span 2;
+    }
+
+    #calculator-section{
+        grid-column: 3;
+        grid-row: 2 / span 2;
+    }
+}
