--- a/style.scss
+++ b/style.scss
@@ -112,18 +112,36 @@ footer{
         align-items: center;
     }
 
+    #intro-area{
+        #tagline-top{
+            font-size: 36px;
+            margin-bottom: 0px;
+        }
+        #tagline-bottom{
+            font-size: 36px;
+            margin-top: -4px;
+        }
+        #intro{
+            font-size: 15.2px;
+            max-width: 60%;
+            margin: 17px auto 65px auto;
+        }
+    }
+
+
     #cards{
         display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto auto;
-        gap: 0px;
+        gap: 29px;
         //margin: auto 10% auto 10%;
     }
 
 
 
     .product-section{
-        max-width: 350px;
+        width: 350px;
+        height: 250px;
         margin: 0px 0px 0px 0px;
     }
 
